--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
   <div class="container">
     <h1>Jogo da Velha</h1>
+    <!-- Tabuleiro do jogo -->
     <ul id="game">
+      <!-- Células do tabuleiro -->
       <li data-pos="0,0"></li>
       <li data-pos="0,1"></li>
       <li data-pos="0,2"></li>
@@ -19,24 +21,30 @@
       <li data-pos="2,1"></li> 
       <li data-pos="2,2"></li>
     </ul>
+    <!-- Botão para resetar o jogo -->
     <button id="reset-game">Resetar Jogo</button>
+    <!-- Mensagens do jogo (vencedor, empate) -->
     <div id="game-messages">
       <span class="player-x-win">Player 1 Ganhou</span>
       <span class="player-o-win">Player 2 Ganhou</span>
       <span class="draw">Empate</span>
     </div>
+    <!-- Informações sobre o turno e pontuação -->
     <aside id="nfo">
       <h2>Vez de:</h2>
+      <!-- Elemento que indica qual jogador deve jogar -->
       <div id="whos-turn" class="x">
         <span class="x">Player 1</span>
         <span class="o">Player 2</span>
       </div>
       <h2>Pontuação</h2>
+      <!-- Exibição da pontuação dos jogadores -->
       <div id="score">
         Player 1: <span id="player-one-score">0</span> <br />
         Player 2: <span id="player-two-score">0</span> <br />
       </div>
     </aside>
+    <!-- Menu de opções do jogo -->
     <div id="menu">
       <button id="player-vs-player">Jogador vs Jogador</button>
       <button id="player-vs-cpu">Jogador vs CPU</button>
@@ -44,7 +52,7 @@
       <button id="exit-game">Sair</button>
     </div>
   </div>
+  <!-- Inclusão do script JavaScript -->
   <script src="script.js"></script>
-    
 </body>
 </html>
