--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <button id="reset-game">Resetar Jogo</button>
 
     <div id="game-messages">
-      <span class="player-x-win">Player 1 Ganhou</span>
-      <span class="player-o-win">Player 2 Ganhou</span>
+      <span class="player-x-win">Player 1 Ganhou!</span>
+      <span class="player-o-win">Player 2 Ganhou!</span>
       <span class="draw">Empate</span>
     </div>
 
@@ -37,7 +37,7 @@
         <span class="o">Player 2</span>
       </div>
 
-      <h2>Pontuação</h2>
+      <h2>Pontuação: </h2>
 
       <div id="score">
         Player 1: <span id="player-one-score">0</span> <br />
